improved mapping algorithm from BioInception Labs